﻿	* Add Helpers.Argument.ValidateLength(T[]) overload for disambiguation.
	* TemporaryDirectory now accepts custom parent directory.
	* EmbeddedPackage now accepts custom TemporaryDirectory instance for storage.
	* ExternalTool now accepts paths relative to the current directory.

14.1.0
	* Add WidevineConstants.SystemId.

14.0.0
	* Added Helpers.Random.GetBoolean().
	* Added Helpers.Random.GetWords() with length limit.
	* Added more words to random test data words.
	* Added Helpers.Random.GetRandomItems().
	* Reduced string formatting overhead in logging system.
	* Removed oldschool string.Format() style logging methods. Use interpolation.
	* Added DelegatingDisposable.
	* Helpers.Debug.GetAllExceptionMessages() now returns also exception types and unrolls aggregate exceptions.
	* Helpers.Debug.ToDebugString() now uses a local parameterless ToString() if one exists.

13.0.0
	* .NET Framework specific features now require 4.7.2 because it is 2019.
	* Updated NLog dependency to latest stable.
	* Added Helpers.Argument.ValidateLength<T>() generic overload.

12.1.2
	* WeakEventListener is now thread-safe.

12.1.1
	* Fixed crash due to overflow when comparing GrpcAddress.

12.1.0
	* Addewd GrpcAddress.

12.0.0
	* Added ExtensionsForCollections.Shuffle().
	* TestClass -> BaseTestClass to reduce naming conflicts.

11.2.1
	* .NET Core 2.1 compatibility for ExternalTool. They changed an exception type.

11.2.0
	* Wildcard now supports multiple patterns as alternatives.

11.1.1
	* Performance optimizations for CompositingStream.

11.1.0
	* Added ExtensionsForTask.LogExceptions() for easy exception logging without having to await.

11.0.0
	* Removed Helpers.Timeout.GetCancellationToken() as it used some bad practices for CTS lifetime management.
	* ExternalTool now supports asynchronous usage.

10.0.4
	* ExternalTool now closes standard input after use, to signal apps that all input has been provided.

10.0.3